--- a/sass/breakpoints/_x-small.scss
+++ b/sass/breakpoints/_x-small.scss
@@ -39,6 +39,10 @@
           a.link {
             width: 60%;
           }
+
+          a.active {
+            width: 60%;
+          }
         }
       }
     }
