--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -82,6 +82,7 @@ main#index {
     .divisor2 .card {
       background-color: transparent;
       border: none;
+      position: relative;
 
       a.link {
         border-radius: 20px;
@@ -90,6 +91,17 @@ main#index {
         font-size: 1.6rem;
         width: 80%;
       }
+
+      a.active {
+        border-radius: 20px;
+        padding: 0.5rem;
+        margin-bottom: 4rem;
+        font-size: 1.6rem;
+        width: 80%;
+        position: absolute;
+        color: transparent;
+      }
+
       
       img {
         width: 80%;
