correcciones a link profesores

--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -105,7 +105,7 @@ main.contacto .contenedor .section3 form button {
 }
 
 main#index .main .section3 .divisor1 h2,
-main#index .main .divisor2 .card a.background,
+main#index .main .divisor2 .card a.active,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
@@ -194,7 +194,7 @@ body.light-mode {
   }
 
   main#index .main .section3 .divisor1 h2,
-  main#index .main .divisor2 .card a.background,
+  main#index .main .divisor2 .card a.active,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
