--- a/css/styles.css
+++ b/css/styles.css
@@ -587,7 +587,7 @@ main#musica .divisor-2 {
   margin: auto;
   padding-top: 2rem;
 }
-main#musica .divisor-2 section {
+main#musica .divisor-2 .section4 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -599,6 +599,9 @@ main#musica .divisor-2 .section4 a {
   font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+main#musica .divisor-2 .section4 h3 {
+  width: 100%;
 }
 
 main.contacto {
