--- a/sass/pages/_canto-piano-violin.scss
+++ b/sass/pages/_canto-piano-violin.scss
@@ -1,5 +1,6 @@
 @mixin background-image($url) {
-  background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}), url($url);
+  background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}),
+    url($url);
 }
 
 main {
@@ -57,19 +58,23 @@ main {
       margin: auto;
       padding-top: 2rem;
 
-      section {
+      .section4 {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         gap: 1rem;
         align-items: center;
-      }
 
-      .section4 a {
-        padding: 1.5em;
-        font-weight: 300;
-        text-transform: uppercase;
-        letter-spacing: 1px;
+        a {
+          padding: 1.5em;
+          font-weight: 300;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+        }
+
+        h3 {
+          width: 100%;
+        }
       }
     }
   }
