--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -1,5 +1,6 @@
 @mixin background-image($url) {
- background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}), url($url);
+  background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}),
+    url($url);
   background-size: cover;
   background-position: center;
 }
@@ -10,7 +11,6 @@
 }
 
 main.contacto {
-
   padding-top: 3rem;
 
   .contenedor {
