--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -49,6 +49,10 @@ main {
   }
 }
 
+main.contacto .contenedor .section3 form ::placeholder {
+  color: $color-fondo-op50-claro;
+}
+
 .navbar-toggler,
 main#index .main .divisor2 .card a.active:hover,
 main#musica .divisor-2 .section4 a:hover,
@@ -76,8 +80,7 @@ main#index .main .section3 .divisor3 .mapa,
 main#musica .divisor-1 section div img,
 main#musica .divisor-2 .section4 img,
 main.contacto .contenedor .section3 form button,
-main#musica .divisor-2 .section4 a
- {
+main#musica .divisor-2 .section4 a {
   border: solid 1px $color-primero;
 }
 
@@ -91,6 +94,8 @@ h3,
 h4,
 p,
 a,
+main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form textarea,
 main.contacto .contenedor .section3 form label,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form button {
@@ -175,6 +180,10 @@ body.light-mode {
     }
   }
 
+  main.contacto .contenedor .section3 form ::placeholder {
+    color: $color-fondo-op50;
+  }
+
   .navbar-toggler,
   main#index .main .divisor2 .card a.active:hover,
   main#musica .divisor-2 .section4 a:hover,
@@ -195,11 +204,11 @@ body.light-mode {
 
   main#index .main .section3 .divisor1 h2,
   main#index .main .divisor2 .card a.active,
-main.contacto .contenedor .section3 form input,
-main.contacto .contenedor .section3 form select,
-main.contacto .contenedor .section3 form textarea {
-  background-color: $color-primero-claro-transparente;
-}
+  main.contacto .contenedor .section3 form input,
+  main.contacto .contenedor .section3 form select,
+  main.contacto .contenedor .section3 form textarea {
+    background-color: $color-primero-claro-transparente;
+  }
 
   main.contacto {
     @include background-image("../assets/img/background/2.webp");
@@ -215,6 +224,8 @@ main.contacto .contenedor .section3 form textarea {
   h4,
   p,
   a,
+  main.contacto .contenedor .section3 form input,
+  main.contacto .contenedor .section3 form textarea,
   main.contacto .contenedor .section3 form label,
   main.contacto .contenedor .section3 form select,
   main.contacto .contenedor .section3 form button {
