--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -1,3 +1,9 @@
+// COLOR SOLO PARA BACK-TO-TOP 
+.back-to-top {
+	background-color: rgb(220, 20, 60);
+}
+
+
 // VARIABLES COLOR MODO OSCURO 'DARK MODE' / Función: colores que se aplican en "dark mode"
 
 $color-primero: rgb(27, 26, 25);
@@ -73,14 +79,26 @@ main.contacto .contenedor .section3 form button {
 }
 
 main#index .main .section3 .divisor1 h2,
+main#index .main .divisor2 .card a.active,
+main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form select,
+main.contacto .contenedor .section3 form textarea {
+  background-color: $color-primero-transparente;
+}
+
+main#index .main .section3 .divisor1 h2,
 main#index .main .section3 .divisor2 h3,
 main#index .main .section3 .divisor2 img,
 main#index .main .divisor2 .card a.active,
 main#index .main .section3 .divisor3 .mapa,
 main#musica .divisor-1 section div img,
 main#musica .divisor-2 .section4 img,
-main.contacto .contenedor .section3 form button,
-main#musica .divisor-2 .section4 a {
+main#musica .divisor-2 .section4 a
+main.contacto .contenedor .section3 form input,
+main.contacto .contenedor .section3 form select,
+main.contacto .contenedor .section3 form textarea,
+main.contacto .contenedor .section3 form button
+ {
   border: solid 1px $color-primero;
 }
 
@@ -100,21 +118,6 @@ main.contacto .contenedor .section3 form label,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form button {
   color: $color-segundo;
-}
-
-main.contacto .contenedor .section3 form input,
-main.contacto .contenedor .section3 form select,
-main.contacto .contenedor .section3 form textarea,
-main.contacto .contenedor .section3 form button {
-  border: solid 1px $color-primero;
-}
-
-main#index .main .section3 .divisor1 h2,
-main#index .main .divisor2 .card a.active,
-main.contacto .contenedor .section3 form input,
-main.contacto .contenedor .section3 form select,
-main.contacto .contenedor .section3 form textarea {
-  background-color: $color-primero-transparente;
 }
 
 .toggleDark,
