--- a/css/styles.css
+++ b/css/styles.css
@@ -82,10 +82,6 @@ main iframe.mapa:hover {
   transform: translateY(-8px);
 }
 
-.back-to-top {
-  background-color: rgb(220, 20, 60);
-}
-
 main.principal {
   background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
@@ -203,6 +199,10 @@ a[aria-current=page],
   color: rgb(83, 152, 225);
 }
 
+.back-to-top {
+  background-color: rgb(220, 20, 60);
+}
+
 body.light-mode main.principal {
   background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
@@ -276,8 +276,9 @@ body.light-mode main.contacto .contenedor .section3 form select,
 body.light-mode main.contacto .contenedor .section3 form button {
   color: rgb(27, 26, 25);
 }
-body.light-mode .toggleDark,
-body.light-mode .toggleLight:hover,
+body.light-mode .toggleLight:hover {
+  color: rgb(225, 202, 83);
+}
 body.light-mode .navbar-brand:hover,
 body.light-mode .navbar-toggler svg:hover,
 body.light-mode footer div#redes ul li a:hover {
@@ -294,10 +295,6 @@ body.light-mode .nav-link:hover {
 }
 body.light-mode .checkbox input#checkbox {
   accent-color: rgb(83, 152, 225);
-}
-body.light-mode .toggleDark:hover,
-body.light-mode .toggleLight {
-  color: rgb(83, 152, 225);
 }
 
 h1,
