--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,6 @@ main.contacto .contenedor .section3 form button {
 }
 
 main#index .main .section3 .divisor1 h2,
-main#index .main .divisor2 .card a.active,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
@@ -142,11 +141,11 @@ main.contacto .contenedor .section3 form textarea {
 main#index .main .section3 .divisor1 h2,
 main#index .main .section3 .divisor2 h3,
 main#index .main .section3 .divisor2 img,
-main#index .main .divisor2 .card a.active,
 main#index .main .section3 .divisor3 .mapa,
 main#musica .divisor-1 section div img,
 main#musica .divisor-2 .section4 img,
-main#musica .divisor-2 .section4 a main.contacto .contenedor .section3 form input,
+main#musica .divisor-2 .section4 a,
+main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea,
 main.contacto .contenedor .section3 form button {
@@ -199,6 +198,7 @@ a[aria-current=page],
   color: rgb(83, 152, 225);
 }
 
+main#index .main .divisor2 .card a.background,
 .back-to-top {
   background-color: rgb(220, 20, 60);
 }
@@ -231,34 +231,6 @@ body.light-mode main.contacto {
 body.light-mode main.contacto .contenedor .section3 form ::placeholder {
   color: rgba(0, 0, 0, 0.5);
 }
-body.light-mode .navbar-toggler,
-body.light-mode main#index .main .divisor2 .card a.active:hover,
-body.light-mode main#musica .divisor-2 .section4 a:hover,
-body.light-mode main.contacto .contenedor .section3 form button:hover,
-body.light-mode main.contacto .contenedor .section3 form input:hover,
-body.light-mode main.contacto .contenedor .section3 form textarea:hover,
-body.light-mode header a[aria-current=page],
-body.light-mode .nav-link:hover {
-  color: rgb(234, 234, 234);
-}
-body.light-mode header nav.navbar,
-body.light-mode footer,
-body.light-mode main#musica .divisor-2 .section4 a,
-body.light-mode main.contacto .contenedor .section3 form button {
-  background-color: rgb(234, 234, 234);
-}
-body.light-mode main#index .main .section3 .divisor1 h2,
-body.light-mode main#index .main .divisor2 .card a.active,
-body.light-mode main.contacto .contenedor .section3 form input,
-body.light-mode main.contacto .contenedor .section3 form select,
-body.light-mode main.contacto .contenedor .section3 form textarea {
-  background-color: rgba(244, 244, 244, 0.4);
-}
-body.light-mode main.contacto {
-  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/2.webp");
-  background-size: cover;
-  background-position: center;
-}
 body.light-mode .navbar-brand,
 body.light-mode .navbar-brand:visited,
 body.light-mode .navbar-toggler svg,
@@ -275,6 +247,34 @@ body.light-mode main.contacto .contenedor .section3 form label,
 body.light-mode main.contacto .contenedor .section3 form select,
 body.light-mode main.contacto .contenedor .section3 form button {
   color: rgb(27, 26, 25);
+}
+body.light-mode .navbar-toggler,
+body.light-mode main#index .main .divisor2 .card a.background,
+body.light-mode main#index .main .divisor2 .card a.active:hover,
+body.light-mode main#musica .divisor-2 .section4 a:hover,
+body.light-mode main.contacto .contenedor .section3 form button:hover,
+body.light-mode main.contacto .contenedor .section3 form input:hover,
+body.light-mode main.contacto .contenedor .section3 form textarea:hover,
+body.light-mode header a[aria-current=page],
+body.light-mode .nav-link:hover {
+  color: rgb(234, 234, 234);
+}
+body.light-mode header nav.navbar,
+body.light-mode footer,
+body.light-mode main#musica .divisor-2 .section4 a,
+body.light-mode main.contacto .contenedor .section3 form button {
+  background-color: rgb(234, 234, 234);
+}
+body.light-mode main#index .main .section3 .divisor1 h2,
+body.light-mode main.contacto .contenedor .section3 form input,
+body.light-mode main.contacto .contenedor .section3 form select,
+body.light-mode main.contacto .contenedor .section3 form textarea {
+  background-color: rgba(244, 244, 244, 0.4);
+}
+body.light-mode main.contacto {
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/2.webp");
+  background-size: cover;
+  background-position: center;
 }
 body.light-mode .toggleLight:hover {
   color: rgb(225, 202, 83);
