--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -67,7 +67,6 @@ main.contacto .contenedor .section3 form button {
 }
 
 main#index .main .section3 .divisor1 h2,
-main#index .main .divisor2 .card a.active,
 main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea {
@@ -77,19 +76,11 @@ main.contacto .contenedor .section3 form textarea {
 main#index .main .section3 .divisor1 h2,
 main#index .main .section3 .divisor2 h3,
 main#index .main .section3 .divisor2 img,
-main#index .main .divisor2 .card a.active,
 main#index .main .section3 .divisor3 .mapa,
 main#musica .divisor-1 section div img,
 main#musica .divisor-2 .section4 img,
-main#musica
-  .divisor-2
-  .section4
-  a
-  main.contacto
-  .contenedor
-  .section3
-  form
-  input,
+main#musica .divisor-2 .section4 a,
+main.contacto .contenedor .section3 form input,
 main.contacto .contenedor .section3 form select,
 main.contacto .contenedor .section3 form textarea,
 main.contacto .contenedor .section3 form button {
@@ -142,6 +133,7 @@ a[aria-current="page"],
   color: $color-cuarto;
 }
 
+main#index .main .divisor2 .card a.background,
 .back-to-top {
   background-color: $color-quinto;
 }
@@ -185,7 +177,26 @@ body.light-mode {
     color: $color-fondo-op50;
   }
 
+  .navbar-brand,
+  .navbar-brand:visited,
+  .navbar-toggler svg,
+  .navbar-nav a,
+  h1,
+  h2,
+  h3,
+  h4,
+  p,
+  a,
+  main.contacto .contenedor .section3 form input,
+  main.contacto .contenedor .section3 form textarea,
+  main.contacto .contenedor .section3 form label,
+  main.contacto .contenedor .section3 form select,
+  main.contacto .contenedor .section3 form button {
+    color: $color-primero;
+  }
+
   .navbar-toggler,
+  main#index .main .divisor2 .card a.background,
   main#index .main .divisor2 .card a.active:hover,
   main#musica .divisor-2 .section4 a:hover,
   main.contacto .contenedor .section3 form button:hover,
@@ -204,7 +215,6 @@ body.light-mode {
   }
 
   main#index .main .section3 .divisor1 h2,
-  main#index .main .divisor2 .card a.active,
   main.contacto .contenedor .section3 form input,
   main.contacto .contenedor .section3 form select,
   main.contacto .contenedor .section3 form textarea {
@@ -215,23 +225,7 @@ body.light-mode {
     @include background-image("../assets/img/background/2.webp");
   }
 
-  .navbar-brand,
-  .navbar-brand:visited,
-  .navbar-toggler svg,
-  .navbar-nav a,
-  h1,
-  h2,
-  h3,
-  h4,
-  p,
-  a,
-  main.contacto .contenedor .section3 form input,
-  main.contacto .contenedor .section3 form textarea,
-  main.contacto .contenedor .section3 form label,
-  main.contacto .contenedor .section3 form select,
-  main.contacto .contenedor .section3 form button {
-    color: $color-primero;
-  }
+
 
   .toggleLight:hover {
     color: $color-tercero;
