--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -84,7 +84,7 @@ main#index {
       border: none;
       position: relative;
 
-      a.link {
+      .link {
         border-radius: 20px;
         padding: 0.5rem;
         margin-bottom: 4rem;
