--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -94,7 +94,12 @@ main#index {
 
       a.active {
         position: absolute;
-        color: transparent;
+        // color: transparent;
+        opacity: 0;
+
+        &:hover {
+          opacity: 1;
+        }
       }
 
       img {
