--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -48,6 +48,7 @@ main.contacto .contenedor .section3 form ::placeholder {
 }
 
 .navbar-toggler,
+main#index .main .divisor2 .card a.active,
 main#index .main .divisor2 .card a.active:hover,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
@@ -114,6 +115,7 @@ footer div#redes ul li a:hover {
   color: $color-tercero;
 }
 
+main#index .main .divisor2 .card a.active,
 main#index .main .divisor2 .card a.active:hover,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form select:hover,
@@ -197,6 +199,7 @@ body.light-mode {
   }
 
   .navbar-toggler,
+  main#index .main .divisor2 .card a.active,
   main#index .main .divisor2 .card a.active:hover,
   main#musica .divisor-2 .section4 a:hover,
   main.contacto .contenedor .section3 form button:hover,
@@ -237,6 +240,7 @@ body.light-mode {
     color: $color-cuarto;
   }
 
+  main#index .main .divisor2 .card a.active,
   main#index .main .divisor2 .card a.active:hover,
   main#musica .divisor-2 .section4 a:hover,
   main.contacto .contenedor .section3 form button:hover,
