--- a/sass/pages/_canto-piano-violin.scss
+++ b/sass/pages/_canto-piano-violin.scss
@@ -3,16 +3,43 @@
     url($url);
 }
 
+@mixin section-styles($width) {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  width: $width;
+}
+
+@mixin text-styles {
+  margin-bottom: 1rem;
+  line-height: 2.5rem;
+}
+
+@mixin img-styles($width, $height) {
+  width: $width;
+  height: $height;
+  object-fit: cover;
+  margin-bottom: 2rem;
+}
+
+%flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+%flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 main {
   &#musica {
     background-size: cover;
     background-position: center;
 
-    h1,
-    h2,
-    h3 {
-      margin-bottom: 1rem;
-      line-height: 2.5rem;
+    h1, h2, h3 {
+      @include text-styles;
       width: 20%;
     }
 
@@ -22,10 +49,7 @@ main {
     }
 
     div section div img {
-      width: 12rem;
-      height: 12rem;
-      object-fit: cover;
-      margin-bottom: 2rem;
+      @include img-styles(12rem, 12rem);
     }
 
     .section-top {
@@ -36,8 +60,7 @@ main {
       width: 100%;
       max-width: 1200px;
       margin: auto;
-      display: flex;
-      flex-direction: column;
+      @extend %flex-column;
       justify-content: center;
       padding: 0.5rem;
       margin-top: 4rem;
@@ -45,12 +68,9 @@ main {
       .section1,
       .section2,
       .section3 {
-        display: flex;
-        align-items: center;
+        @include section-styles(100%);
+        @extend %flex-center;
         padding-bottom: 2rem;
-        width: 100%;
-        justify-content: space-between;
-        gap: 1rem;
       }
     }
 
@@ -59,8 +79,7 @@ main {
       padding-top: 2rem;
 
       .section4 {
-        display: flex;
-        flex-direction: column;
+        @extend %flex-column;
         justify-content: space-between;
         gap: 1rem;
         align-items: center;
