--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -10,6 +10,22 @@
   padding-bottom: $padding-bottom;
 }
 
+%flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+%form-elements {
+  max-width: 10rem;
+  min-height: 1.4rem;
+  margin: auto;
+  letter-spacing: 1px;
+}
+
+%italic-text {
+  font-style: italic;
+}
+
 main.contacto {
   padding-top: 3rem;
 
@@ -33,17 +49,18 @@ main.contacto {
     .section1 {
       grid-area: section1;
     }
+
     .section2 {
       grid-area: section2;
     }
+
     .section3 {
       grid-area: section3;
 
       form {
         width: 100%;
         margin: auto;
-        display: flex;
-        flex-direction: column;
+        @extend %flex-column;
 
         label {
           padding: 4px;
@@ -54,23 +71,19 @@ main.contacto {
         select,
         textarea,
         button {
-          max-width: 10rem;
-          min-height: 1.4rem;
-          margin: auto;
-          letter-spacing: 1px;
+          @extend %form-elements;
         }
 
         input,
         select,
         textarea {
-          font-style: italic;
+          @extend %italic-text;
         }
 
         button {
           padding: 0.8em;
           font-weight: 300;
           text-transform: uppercase;
-          letter-spacing: 1px;
         }
 
         .checkbox {
